--- a/src/gui/PoliVisor.form
+++ b/src/gui/PoliVisor.form
@@ -105,6 +105,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Un rect&#xe1;ngulo!"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="botonRectanguloActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="botonTriangulo">
           <Properties>
